# TinyStories-35M

./: README.md
model_training/: pyproject.toml
model_training/src/: dataloader.py  startup.py
model_training/src/TinyStories_BPE_8K/: tokenizer.json
model_training_v2/src/: generate.py  model.py  modelConfig.py  training.py
model_training_v2/src/TinyStories_BPE_8K/: tokenizer_config.json
