[project]
name = "model-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "torch>=2.10.0",
    "torchao>=0.16.0",
    "torchtune>=0.6.1",
    "transformers>=5.2.0",
    "wandb>=0.25.0",
]
